запуск тестов на сервере

--- a/suban05/Minitest/Тесты/Запуск.yaml
+++ b/suban05/Minitest/Тесты/Запуск.yaml
@@ -7,6 +7,8 @@
     Путь: tests
     Содержимое:
         Тип: ФиксированнаяГруппа
+        ОтступПоВертикали: Одинарный
+        ОтступПоГоризонтали: Двойной
         Содержимое:
             -
                 Тип: Надпись
@@ -20,10 +22,15 @@
                     Значение: Auto
                 Шрифт: =СтилевыеШрифты.ЗаголовокКрупный
             -
-                Тип: Надпись
+                Тип: ФиксированнаяГруппа
                 Имя: Результаты
-                РастягиватьПоВертикали: Истина
-                РастягиватьПоГоризонтали: Истина
-                РастягиватьРодителя:
-                    Тип: Авто
-                    Значение: Auto
+                Ориентация: Горизонтальная
+                Содержимое:
+                    -
+                        Тип: РезультатыТестирования
+                        Имя: РезультатыНаКлиенте
+                        Контекст: На клиенте
+                    -
+                        Тип: РезультатыТестирования
+                        Имя: РезультатыНаСервере
+                        Контекст: На сервере
