реализованы коллбеки ПередКаждым и ПослеКаждого

--- a/suban05/Minitest/Тесты/НаборТестов.yaml
+++ b/suban05/Minitest/Тесты/НаборТестов.yaml
@@ -11,3 +11,9 @@
         Имя: Результаты
         Тип: Массив<Строка>
         ТолькоЧтение: Истина
+    -
+        Имя: ПередКаждым
+        Тип: ЭлементНабораТестов?
+    -
+        Имя: ПослеКаждого
+        Тип: ЭлементНабораТестов?
