--- a/suban05/MinitestTestApp/Демо/СервисАбитуриентов.yaml
+++ b/suban05/MinitestTestApp/Демо/СервисАбитуриентов.yaml
@@ -6,4 +6,10 @@
 Поля:
     -
         Имя: Логин
+        Тип: Строка?
+    -
+        Имя: Подключен
+        Тип: Булево
+    -
+        Имя: Состояние
         Тип: Строка
