построение результатов тестирования в виде списка объектов

--- a/suban05/Minitest/Тесты/НаборТестов.yaml
+++ b/suban05/Minitest/Тесты/НаборТестов.yaml
@@ -9,7 +9,7 @@
         Тип: Массив<ЭлементНабораТестов>
     -
         Имя: Результаты
-        Тип: Массив<Строка>
+        Тип: Массив<РезультатВыполненияТеста>
         ТолькоЧтение: Истина
     -
         Имя: ПередКаждым
@@ -17,3 +17,6 @@
     -
         Имя: ПослеКаждого
         Тип: ЭлементНабораТестов?
+    -
+        Имя: Статус
+        Тип: СтатусТестов
