json свойства + переименование структур

--- a/suban05/Minitest/Тесты/РезультатВыполненияТеста.yaml
+++ b/suban05/Minitest/Тесты/РезультатВыполненияТеста.yaml
@@ -7,9 +7,21 @@
     -
         Имя: Статус
         Тип: СтатусТестов
+        Аннотации:
+            -
+                Тип: JsonСвойство
+                Имя: status
     -
         Имя: Тест
         Тип: Строка
+        Аннотации:
+            -
+                Тип: JsonСвойство
+                Имя: test
     -
         Имя: ОтчетОВыполнении
         Тип: Строка
+        Аннотации:
+            -
+                Тип: JsonСвойство
+                Имя: report
