--- a/suban05/Minitest/Тесты/РезультатВыполненияТестовогоМодуля.yaml
+++ b/suban05/Minitest/Тесты/РезультатВыполненияТестовогоМодуля.yaml
@@ -1,6 +1,6 @@
 ВидЭлемента: Структура
-Ид: d3b4ab11-869b-4bcc-904b-29b4bce233d4
-Имя: РезультатТестирования
+Ид: 4d4397bc-06d9-46f7-9b16-60f7af9a15e0
+Имя: РезультатВыполненияТестовогоМодуля
 ОбластьВидимости: ВПодсистеме
 Окружение: КлиентИСервер
 Поля:
@@ -11,18 +11,16 @@
             -
                 Тип: JsonСвойство
                 Имя: status
-        ЗначениеПоУмолчанию: Выполнен
     -
-        Имя: КодСтатуса
-        Тип: Число
+        Имя: ТестовыйМодуль
+        Тип: Строка
         Аннотации:
             -
                 Тип: JsonСвойство
-                Имя: code
-        ЗначениеПоУмолчанию: 1
+                Имя: testModule
     -
-        Имя: Результаты
-        Тип: Массив<РезультатВыполненияТестовогоМодуля>
+        Имя: РезультатыВыполения
+        Тип: Массив<РезультатВыполненияТеста>
         Аннотации:
             -
                 Тип: JsonСвойство
