проверка теста на уникальность

--- a/suban05/Minitest/Тесты/ЭлементНабораТестов.yaml
+++ b/suban05/Minitest/Тесты/ЭлементНабораТестов.yaml
@@ -10,3 +10,10 @@
     -
         Имя: Содержимое
         Тип: (()->ничто)?
+    -
+        Имя: МодульТестов
+        Тип: Тестирование?
+        ТолькоЧтение: Истина
+    -
+        Имя: Идентификатор
+        Тип: Строка
