--- a/suban05/Minitest/Тесты/НаборТестов.yaml
+++ b/suban05/Minitest/Тесты/НаборТестов.yaml
@@ -20,3 +20,7 @@
     -
         Имя: Статус
         Тип: СтатусТестов
+    -
+        Имя: МодульТестов
+        Тип: Тестирование?
+        ТолькоЧтение: Истина
