--- a/.github/workflows/1cmycloud.yml
+++ b/.github/workflows/1cmycloud.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           config: |
             version: 7.0.5-57
-            project_id: ${{ variables.PROJECT }}
+            project_id: ${{ env.PROJECT }}
             login: ${{ secrets.LOGIN }}
             password: ${{ secrets.PASSWORD }}
             branch: main
