использовать `github.ref_name`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
             project_id: ${{ vars.PROJECT }}
             login: ${{ secrets.LOGIN }}
             password: ${{ secrets.PASSWORD }}
-            branch: main
+            branch: ${{ github.ref_name }}
             actions:
               -
                 name: Tests
