start to develop the english version

--- a/suban05/MinitestTestApp/Проект.yaml
+++ b/suban05/MinitestTestApp/Проект.yaml
@@ -14,3 +14,7 @@
         Версия: 1.0
         Имя: Minitest
         Поставщик: suban05
+    -
+        Версия: 1.0
+        Имя: MinitestEn
+        Поставщик: suban05
