--- a/suban05/Minitest/Проект.yaml
+++ b/suban05/Minitest/Проект.yaml
@@ -1,11 +1,12 @@
 Ид: 0195fcb8-4425-704d-a769-6aacfc7e3a85
-ВидПроекта: Библиотека
-РежимСовместимости: 6.0
-Поставщик: suban05
-Имя: Minitest
 Версия: 1.0
-Представление: "Minitest"
-ПредставлениеПоставщика: "suban05"
-ЯзыкиЛокализации: [Русский]
+ВидПроекта: Библиотека
+Имя: Minitest
+Поставщик: suban05
+Представление: Minitest
+ПредставлениеПоставщика: suban05
+РежимСовместимости: 7.0
 ЯзыкПоУмолчанию: Русский
 ЯзыкРазработки: Русский
+ЯзыкиЛокализации:
+    - Русский
