--- a/suban05/MinitestEn/Testing/TestSuite.yaml
+++ b/suban05/MinitestEn/Testing/TestSuite.yaml
@@ -1,7 +1,7 @@
 ElementKind: Structure
 Id: c5737521-1079-48bc-bd94-d4abfe9d31b9
 Name: TestSuite
-VisibilityScope: InSubsystem
+VisibilityScope: Global
 Environment: ClientAndServer
 Fields:
     -
