--- a/suban05/MinitestEn/Testing/Testing.yaml
+++ b/suban05/MinitestEn/Testing/Testing.yaml
@@ -1,5 +1,5 @@
 ElementKind: ServiceContract
 Id: 51385532-db26-48bb-9a65-ed65f65846b5
 Name: Testing
-VisibilityScope: InSubsystem
+VisibilityScope: Global
 Environment: ClientAndServer
